Change 'Select State' to 'Choose Your State' in all forms

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         <!-- Plate Mode -->
                         <div class="mode-content active" id="plate-mode">
                             <select class="state-select">
-                                <option value="">Select State</option>
+                                <option value="">Choose Your State</option>
                                 <!-- Top 5 most populous states (highlighted in blue) -->
                                 <option value="CA" class="populous-state">California</option>
                                 <option value="TX" class="populous-state">Texas</option>
@@ -1412,7 +1412,7 @@
                         <!-- Plate Mode -->
                         <div class="mode-content active" id="comparison-plate-mode">
                             <select class="state-select">
-                                <option value="">Select State</option>
+                                <option value="">Choose Your State</option>
                                 <!-- Top 5 most populous states (highlighted in blue) -->
                                 <option value="CA" class="populous-state">California</option>
                                 <option value="TX" class="populous-state">Texas</option>
