Update second screen title and subpoints with new content

--- a/index.html
+++ b/index.html
@@ -250,16 +250,16 @@
             <div class="second-screen-content">
                 <div class="second-screen-left">
                     <h2 class="second-screen-title">
-                        <span class="title-line-1">Why thousands trust us</span>
-                        <span class="title-line-2">when buying used cars</span>
+                        <span class="title-line-1">Trusted by thousands</span>
+                        <span class="title-line-2">— because every detail matters</span>
                     </h2>
                     <div class="subpoints">
                         <div class="subpoint">
                             <div class="subpoint-content">
                                 <img src="images/logo-vin-trust.png" alt="Logo" class="subpoint-logo">
                                 <div class="subpoint-text">
-                                    <h3>Complete Check:</h3>
-                                    <p>Accident history, liens, mileage, service records, recalls — all key info in one report.</p>
+                                    <h3>Full History in One Report:</h3>
+                                    <p>Accidents, liens, mileage, recalls, and more — verified data from official sources.</p>
             </div>
                 </div>
               </div>
@@ -267,17 +267,17 @@
                             <div class="subpoint-content">
                                 <img src="images/logo-vin-trust.png" alt="Logo" class="subpoint-logo">
                                 <div class="subpoint-text">
-                                    <h3>Customer Trust:</h3>
-                                    <p>Thousands of users rely on our reports for every car deal.</p>
+                                    <h3>Confidence in Every Deal:</h3>
+                                    <p>Thousands of buyers and dealers rely on VIN TRUST before making a decision.</p>
             </div>
-                  </div>
                 </div>
+              </div>
                         <div class="subpoint">
                             <div class="subpoint-content">
                                 <img src="images/logo-vin-trust.png" alt="Logo" class="subpoint-logo">
                                 <div class="subpoint-text">
-                                    <h3>Complete Check:</h3>
-                                    <p>Accident history, liens, mileage, service records, recalls — all key info in one report.</p>
+                                    <h3>No Surprises:</h3>
+                                    <p>Instantly reveal hidden damage, odometer fraud, or title issues before you pay.</p>
               </div>
             </div>
                   </div>
