Update comparison screen title and subtitle with new English content

--- a/index.html
+++ b/index.html
@@ -1316,10 +1316,10 @@
                 <!-- Left Column: Header + Table -->
                 <div class="comparison-left">
                     <h2 class="comparison-title">
-                        Плати меньше<br>
-                        — получай больше с VIN TRUST
+                        Stop Paying $44.99 for One Report<br>
+                        — Get Unlimited Access for Just $3
           </h2>
-                    <p class="comparison-subtitle">VIN TRUST собирает данные из сотен официальных и отраслевых источников, чтобы дать вам полную и достоверную картину истории автомобиля. Наши инструменты созданы так, чтобы в одном отчёте вы получили все ключевые факты — от прошлых аварий и пробега до залогов, отзывов и обслуживания — без скрытых деталей и лишней траты времен.</p>
+                    <p class="comparison-subtitle">Full accident history, liens, recalls, mileage, and more — all from official sources in one affordable report.</p>
                     
                     <div class="comparison-table">
                         
