Update main title with highlighted words in button colors

--- a/index.html
+++ b/index.html
@@ -152,9 +152,8 @@
     <section class="hero-section">
         <div class="hero-container">
             <h1 class="main-title">
-                Know a Car's Real Story<br>
-                — Before You Spend<br>
-                a Cent
+                Know the <span class="yellow-text">Real History</span> Before You Buy<br>
+                — Only <span class="yellow-text">$3</span>
             </h1>
             
             <p class="subtitle">Uncover accidents, hidden damage, liens, mileage fraud, and more — all in one official VIN report for just $3.</p>
