Update title to two lines format

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
     <section class="hero-section">
         <div class="hero-container">
             <h1 class="main-title">
-                Know the <span class="yellow-text">Real History</span> Before You Buy<br>
-                — Only <span class="yellow-text">$3</span>
+                Know the <span class="yellow-text">Real History</span><br>
+                Before You Buy - Only <span class="yellow-text">$3</span>
             </h1>
             
             <p class="subtitle">Uncover accidents, hidden damage, liens, mileage fraud, and more — all in one official VIN report for just $3.</p>
