Change em dash to regular dash in second screen title

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 <div class="second-screen-left">
                     <h2 class="second-screen-title">
                         <span class="title-line-1">Trusted by thousands</span>
-                        <span class="title-line-2">— because every detail matters</span>
+                        <span class="title-line-2">- because every detail matters</span>
                     </h2>
                     <div class="subpoints">
                         <div class="subpoint">
